TIMAAT #63 - Updated endpoints and storage implementation to load assignable categories of entity types
* When entity is not referenced to a category set, all categories can be assigned